fixed errors with spacing on mobile device screen sizes

--- a/resources/css/about.css
+++ b/resources/css/about.css
@@ -12,7 +12,7 @@
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
-    height: 600px;
+    min-height: 600px;
     border: 1px solid white;
 }
 
